# sdl3-template

./: CMakeLists.txt  README.md  vcpkg.json
src/: main.c
